--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,35 @@
 /* write your override styles here */
+#wall .tag-1{
+    display:none;
+}
+body div #wall #tag-3.slick {
+    display: none;
+}
+#wall #tag-2 {
+    background: url(../images/tag-2.png) no-repeat;
+    z-index: 6;
+    display: block;
+}
+div #tag-2 {
+    display: none;
+}
+
+body div #wall #tag-3.slick {
+    display: none;
+}
+#wall div #tag-4 {
+    background: url(../images/tag-4.png) no-repeat;
+    z-index: 4;
+    display: none;
+}
+div #wall .parent #tag-5.slick {
+    background: url(../images/tag-5.png) no-repeat;
+    z-index: 3;
+    display: block;
+}
+div#wall div.parent div:last-child div#tag-6 {
+    background: url(../images/tag-6.png) no-repeat;
+    z-index: 2;
+    display: block;
+  }
+  
